# tgstat-sdk

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: full_sdk_check.py
examples/callback/: get_callback_info.py  set_callback_url.py  subscribe_channel.py  subscribe_word.py  subscriptions_list.py  unsubscribe.py
examples/channels/: add.py  avg_posts_reach.py  er.py  err.py  err24.py  forwards.py  get.py  mentions.py  posts.py  search.py  stat.py  stories.py  subscribers.py  views.py
examples/database/: categories.py  countries.py  languages.py
examples/posts/: get.py  search.py  stat.py  stat_multi.py
examples/stories/: get.py  stat.py  stat_multi.py
examples/usage/: stat.py
examples/words/: mentions.py  mentions_by_channels.py  mentions_by_period.py  reach.py
tgstat/: __init__.py  client.py  config.py  enums.py  exceptions.py  retry.py  transport.py  types.py
tgstat/models/: __init__.py  base.py  common.py  envelope.py
tgstat/models/callback/: __init__.py  set_callback_url.py  unsubscribe.py
tgstat/models/channels/: __init__.py  add.py  avg_posts_reach.py  er.py  err.py  err24.py  forwards.py  mentions.py  posts.py  search.py  stat.py  stories.py  subscribers.py  views.py
tgstat/models/database/: __init__.py
tgstat/models/posts/: __init__.py  search.py  stat.py  stat_multi.py
tgstat/models/stories/: __init__.py  stat.py  stat_multi.py
tgstat/models/usage/: __init__.py
tgstat/resources/: __init__.py  callback.py  channels.py  database.py  posts.py  stories.py  usage.py  words.py
(+5 files in other folders)
